--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <script src="lib/PushNotification.js"></script>
+
     <!-- ng cordova js -->
     <script src="lib/ng-cordova.js"></script>
 
@@ -23,10 +25,12 @@
 
     <script src="lib/moment.js"></script>
 
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
   </head>
   <body ng-app="starter">
     <!--
